Doc: Delete encpoint docs
