# app/Http/Controllers/LaborRegistrationController.php
@@ -204,6 +204,101 @@ class LaborRegistrationController extends Controller
         ], 201);
     }
 
+    /**
+     * @OA\Delete(
+     *     path="/labor-registration/{id}",
+     *     summary="Delete a labor registration",
+     *     description="Deletes a labor registration by its ID. Throws an error if the ID is invalid or the resource does not exist.",
+     *     operationId="deleteLaborRegistration",
+     *     tags={"Labor-Registration"},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         description="ID of the labor registration to delete",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="integer",
+     *             example=1
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Labor registration deleted successfully",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(property="message", type="string", example="Elf successfully deleted."),
+     *             @OA\Property(property="data", type="object",
+     *                 @OA\Property(
+     *                     property="image",
+     *                     type="string",
+     *                     example="http://localhost:8000/storage/image/image.jpg",
+     *                     description="Image of the labor"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="name",
+     *                     type="string",
+     *                     example="John Doe",
+     *                     description="Name of the labor"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="email",
+     *                     type="string",
+     *                     example="example@example.com",
+     *                     description="Email of the labor"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="age",
+     *                     type="integer",
+     *                     example=25,
+     *                     description="Age of the labor"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="address",
+     *                     type="string",
+     *                     example="1234 Main St",
+     *                     description="Address of the labor"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="height",
+     *                     type="number",
+     *                     example=1.75,
+     *                     description="Height of the labor"
+     *                 )
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="Labor registration not found",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(property="errors", type="array",
+     *                 @OA\Items(
+     *                     type="object",
+     *                     @OA\Property(property="status", type="integer", example=404),
+     *                     @OA\Property(property="title", type="string", example="Not Found"),
+     *                     @OA\Property(property="detail", type="string", example="Elf not found.")
+     *                 )
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=400,
+     *         description="Invalid ID",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(property="errors", type="array",
+     *                 @OA\Items(
+     *                     type="object",
+     *                     @OA\Property(property="status", type="integer", example=406),
+     *                     @OA\Property(property="title", type="string", example="Invalid Id"),
+     *                     @OA\Property(property="detail", type="string", example="Provided Id didn’t match standard.")
+     *                 )
+     *             )
+     *         )
+     *     )
+     * )
+    */
     public function destroy(string $id)
     {
         if( !is_numeric($id) ) {
@@ -224,3 +319,4 @@ class LaborRegistrationController extends Controller
         ], 200);
     }
 }
+
